# Repository

./: .gitignore  .talismanrc  README.md  SparkScripts  elixir1.ex
Algorithms/: .classpath  .gitignore  pom.xml
CloudKon/: .classpath  .csv  .gitignore  .project  CloudKon.properties  Stage-1.txt  Stage-10.txt  Stage-2.txt  Stage-3.txt  Stage-4.txt  Stage-5.txt  Stage-6.txt  Stage-7.txt  Stage-9.txt  Tasks.txt  activemq.properties  cassandra.yaml  ec2_hazelcast.xml  hazelcast.xml  mylogs.out  tasks.txt
GradleSpace/: build.gradle
MEAN/: app.js  package.json
MLR/: .RData  .Rhistory  ELS2002-2012.csv  KNN.R  NaiveBayes.R  README.md  SF.r  stocks.csv
Napster/: .project
Node/: EventEmitter.js  buffer.js  checkEmail.js  fs.js  server.js  test.js  users.csv
PHP/: form.php  index.php  login-form.html  sample.php
PySpark/: .gitignore
Python/: Pipfile  binary_search.py  dijikstra.py  file_crawler.py  gifts.py  karatsuba.py  lcs.py  llm_test.py  quick_sort.py  recursive_count.py  recursive_sum.py  selection_sort.py
RailsApp/: .gitignore  Gemfile  Guardfile
ReduxBooks/: package.json
RubySample/: author.rb
Rust/TypeSystem/: Cargo.toml
Rust/TypeSystem/src/: error.rs  main.rs  network.rs  trait.rs  vector.rs
Rust/TypeSystem/tcp/: Cargo.toml
Rust/TypeSystem/tcp/src/: client.rs
Rust/TypeSystem/tcp/src/network/: mod.rs  server.rs
Rust/rustcc1/: .gitignore  Cargo.toml
Rust/rustcc1/src/: ex1to3.rs  ex4to6.rs  ex7to8.rs  final_project.rs  lib.rs  main.rs
Rust/rustcc1/src/exercises/: ex1.rs  ex2.rs  ex3.rs  ex4.rs  ex5.rs  ex6.rs  ex7.rs  ex8.rs
(+671 files in other folders)
