[package]
name = "rustcc1"
version = "0.1.0"
authors = ["Rajagopal <rajagopal.sarathi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
crossbeam = "0.7.3"
image = "0.21.1"
num-complex = "0.2.1"
clap = "2.33"